--- a/style.css
+++ b/style.css
@@ -6,3 +6,13 @@
     padding: 15px 0px;
     margin: 2px;
 }
+
+
+.navigation{
+    width: 100%;
+    background-color: rgb(197, 191, 191);
+    text-align: center;
+    color: white;
+    padding: 15px 0px;
+    margin: 2px;
+}
